Fixed Findbugs issues.
git-svn-id: https://aomushi.ath.cx:43443/svn/morrigan/trunk@574 2128fabd-03f8-4a31-9ba6-05665b9bae8a